Fixed sign in on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,28 @@ body {
   }
 }
 
+@media (max-width: $screen-xs-max) {
+  .hero {
+    img {
+      width: 40%;
+    }
+    h1 {
+      font-size: 2em;
+      margin-top: 10px;
+    }
+
+    p {
+      clear: both;
+      margin-bottom: 15px;
+    }
+
+    h3 {
+      font-size: 1.3em;
+      margin-top: 5px;
+    }
+  }
+}
+
 .navbar-inverse {
   background: image-url("tweed.png");
 }
